<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/save_button"
        android:icon="@drawable/ic_save"
        android:title="Sale"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/delete_button"
        android:icon="@drawable/ic_delete"
        android:title="Delete"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>