...
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/date_param" />

    <EditText
        android:id="@+id/temperature_param"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="24.7"
        android:inputType="numberDecimal"
...
        android:text="Parameters"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/time_param" />

    <EditText
        android:id="@+id/ph_param"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="6.8"
        android:inputType="numberDecimal"
...
        android:text="Time"
        app:layout_constraintBottom_toBottomOf="@+id/time_param"
        app:layout_constraintEnd_toStartOf="@+id/time_param"
        app:layout_constraintTop_toTopOf="@+id/time_param" />

    <EditText
        android:id="@+id/ammonia_param"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="0,001"
        android:inputType="numberDecimal"
...
